Fix train example.